--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'java-library'
     id 'maven-publish'
     id("xyz.jpenilla.run-paper") version "2.3.1"
 }
@@ -61,5 +62,17 @@ processResources {
     filteringCharset 'UTF-8'
     filesMatching('plugin.yml') {
         expand props
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.github.Salwarex'
+            artifactId = 'BeeLib'
+            version = 'v1.0-alpha'
+
+            from components.java
+        }
     }
 }
