--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: BeeLib
-version: '1.0'
+version: '1.0.7-alpha'
+main: ru.waxera.beeLib.BeeLib
 api-version: '1.21'
 prefix: BeeLib
 authors: [ Salwarex ]
