--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'ru.waxera'
-version = '1.2-alpha'
+version = '1.3-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -70,7 +70,7 @@ publishing {
         maven(MavenPublication) {
             groupId = 'com.github.Salwarex'
             artifactId = 'BeeLib'
-            version = 'v1.2-alpha'
+            version = 'v1.3-SNAPSHOT'
 
             from components.java
         }
